updated pom.xml file