@@ -11,15 +11,14 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<easybuggy-port>8080</easybuggy-port>
-		<!-- default properties (JDK 1.7 or earlier) -->
-		<jvm.args.perm.size>-XX:MaxPermSize=128m</jvm.args.perm.size>
-		<jvm.args.gc.log.path>-Xloggc:logs/gc.log</jvm.args.gc.log.path>
-		<jvm.args.print.heap.at.gc>-XX:+PrintHeapAtGC</jvm.args.print.heap.at.gc>
-		<jvm.args.print.gc.details>-XX:+PrintGCDetails</jvm.args.print.gc.details>
-		<jvm.args.print.gc.date.stamps>-XX:+PrintGCDateStamps</jvm.args.print.gc.date.stamps>
-		<jvm.args.gc.log.file.rotation>-XX:+UseGCLogFileRotation</jvm.args.gc.log.file.rotation>
-		<jvm.args.number.of.gc.log.files>-XX:NumberOfGCLogFiles=5</jvm.args.number.of.gc.log.files>
-		<jvm.args.gc.log.file.size>-XX:GCLogFileSize=10M</jvm.args.gc.log.file.size>
+		<jvm.args.perm.size>-XX:MaxMetaspaceSize=128m</jvm.args.perm.size>
+		<jvm.args.gc.log.path>-Xlog:gc*:logs/gc_%p_%t.log:time,level,tags:filecount=5,filesize=10M</jvm.args.gc.log.path>
+		<jvm.args.print.heap.at.gc>-Dummy=Dummy</jvm.args.print.heap.at.gc>
+		<jvm.args.print.gc.details>-Dummy=Dummy</jvm.args.print.gc.details>
+		<jvm.args.print.gc.date.stamps>-Dummy=Dummy</jvm.args.print.gc.date.stamps>
+		<jvm.args.gc.log.file.rotation>-Dummy=Dummy</jvm.args.gc.log.file.rotation>
+		<jvm.args.number.of.gc.log.files>-Dummy=Dummy</jvm.args.number.of.gc.log.files>
+		<jvm.args.gc.log.file.size>-Dummy=Dummy</jvm.args.gc.log.file.size>
 	</properties>
 
 	<profiles>
@@ -41,13 +40,6 @@
 			<properties>
 				<jvm.args.perm.size>-XX:MaxMetaspaceSize=128m</jvm.args.perm.size>
 				<jvm.args.gc.log.path>-Xlog:gc*:logs/gc_%p_%t.log:time,level,tags:filecount=5,filesize=10M</jvm.args.gc.log.path>
-				<!-- TODO Remove these properties -->
-				<jvm.args.print.heap.at.gc>-Dummy=Dummy</jvm.args.print.heap.at.gc>
-				<jvm.args.print.gc.details>-Dummy=Dummy</jvm.args.print.gc.details>
-				<jvm.args.print.gc.date.stamps>-Dummy=Dummy</jvm.args.print.gc.date.stamps>
-				<jvm.args.gc.log.file.rotation>-Dummy=Dummy</jvm.args.gc.log.file.rotation>
-				<jvm.args.number.of.gc.log.files>-Dummy=Dummy</jvm.args.number.of.gc.log.files>
-				<jvm.args.gc.log.file.size>-Dummy=Dummy</jvm.args.gc.log.file.size>
 			</properties>
 		</profile>
 	</profiles>
@@ -59,7 +51,73 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- Other dependencies -->
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.2</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.8.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.12.1.GA</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjdk.jol</groupId>
+			<artifactId>jol-core</artifactId>
+			<version>0.6</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.25</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.directory.server</groupId>
+			<artifactId>apacheds-all</artifactId>
+			<version>1.5.5</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.directory.shared</groupId>
+					<artifactId>shared-ldap</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.owasp.esapi</groupId>
+			<artifactId>esapi</artifactId>
+			<version>2.1.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>ognl</groupId>
+			<artifactId>ognl</artifactId>
+			<version>3.0.17</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.1</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
@@ -97,6 +155,14 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+			    <groupId>org.owasp</groupId>
+			    <artifactId>dependency-check-maven</artifactId>
+			    <version>6.1.6</version>
+			    <configuration>
+			        <format>ALL</format>
+			    </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -164,8 +230,37 @@
 							<classpathScope>test</classpathScope>
 							<executable>java</executable>
 							<arguments>
+								<argument>${jvm.args.perm.size}</argument>
 								<argument>${jvm.args.gc.log.path}</argument>
-								<!-- Other JVM arguments -->
+								<argument>-Xmx256m</argument>
+								<argument>-XX:MaxDirectMemorySize=90m</argument>
+								<argument>-XX:+UseSerialGC</argument>
+								<argument>${jvm.args.print.heap.at.gc}</argument>
+								<argument>${jvm.args.print.gc.details}</argument>
+								<argument>${jvm.args.print.gc.date.stamps}</argument>
+								<argument>${jvm.args.gc.log.file.rotation}</argument>
+								<argument>${jvm.args.number.of.gc.log.files}</argument>
+								<argument>${jvm.args.gc.log.file.size}</argument>
+								<argument>-XX:GCTimeLimit=15</argument>
+								<argument>-XX:GCHeapFreeLimit=50</argument>
+								<argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
+								<argument>-XX:HeapDumpPath=logs/</argument>
+								<argument>-XX:ErrorFile=logs/hs_err_pid%p.log</argument>
+								<argument>-agentlib:jdwp=transport=dt_socket,server=y,address=9009,suspend=n</argument>
+								<argument>-Dderby.stream.error.file=logs/derby.log</argument>
+								<argument>-Dderby.infolog.append=true</argument>
+								<argument>-Dderby.language.logStatementText=true</argument>
+								<argument>-Dderby.locks.deadlockTrace=true</argument>
+								<argument>-Dderby.locks.monitor=true</argument>
+								<argument>-Dderby.storage.rowLocking=true</argument>
+								<argument>-Dcom.sun.management.jmxremote</argument>
+								<argument>-Dcom.sun.management.jmxremote.port=7900</argument>
+								<argument>-Dcom.sun.management.jmxremote.ssl=false</argument>
+								<argument>-Dcom.sun.management.jmxremote.authenticate=false</argument>
+								<argument>-ea</argument>
+								<argument>-jar</argument>
+								<argument>target/easybuggy.jar</argument>
+								<argument>-httpPort=${easybuggy-port}</argument>
 							</arguments>
 						</configuration>
 					</execution>
@@ -185,7 +280,33 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!-- Other plugins -->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-antrun-plugin
+										</artifactId>
+										<versionRange>[1.3,)</versionRange>
+										<goals>
+											<goal>run</goal>
+										</goals>
+									</pluginExecutionFilter>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
